Initial code for webpage

--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,227 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- UIkit CSS -->
+    <meta property="og:title" content="kekstatus" />
+    <meta property="og:site_name" content="kekstatus" />
+    <meta property="og:url" content="kekstatus.spuun.art" />
+    <meta property="og:description" content=Status of all Kek's (that're hosted
+    on the Raspberry Pi) pm2 services.>
+    <meta property="og:type" content="website" />
+    <meta property="og:image"
+    content=https://cdn.discordapp.com/attachments/1001184473385287710/1005000604080406588/Green-haired_catgirl_with_blue_eyes_and_cat_ears_at_the_beach_by_Ross_Tran_and_WLOP_artstation_hq_sunset_lighting_warm_light_instagram_stars_Photorealistic-0.png>
+
     <link
+      href="https://unpkg.com/@picocss/pico@1.5.3/css/pico.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/uikit@3.15.1/dist/css/uikit.min.css"
+      integrity="sha256-mfxZ3h/5TlG7CrG2QZERaBDAe459yqruceYsvvoexX4= sha384-x2grTbN+s4BXSUxnfuMLqiLAb4wtvew6Yq9ozcRiWYStIrbOU+DjcuGm2g6hpz4B sha512-2MD814AVKlRmLMNeIKnmSSJEaI1gFz742oiIWCkRDZ3ZoN8lALOPN71gCCya8WItuZNfrulKl5jnLOVIhtGY+A=="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="icon"
+      href="https://cdn.discordapp.com/attachments/1001184473385287710/1005000604080406588/Green-haired_catgirl_with_blue_eyes_and_cat_ears_at_the_beach_by_Ross_Tran_and_WLOP_artstation_hq_sunset_lighting_warm_light_instagram_stars_Photorealistic-0.png"
+      type="image/png"
+      sizes="16x16"
     />
 
-    <!-- UIkit JS -->
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.1/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.1/dist/js/uikit-icons.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/muuri@0.9.5/dist/muuri.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web-animations-js@2.3.2/web-animations.min.js"></script>
 
-    <title>Document</title>
+    <title>kekstatus</title>
+    <meta
+      name="description"
+      content="Status of all Kek's (that're hosted on the Raspberry Pi) pm2 services."
+    />
+    <meta name="author" content="spuun" />
+    <meta
+      name="keywords"
+      content="kekstatus, kek, status, spuun, raspberry pi, pm2"
+    />
   </head>
-  <body>
+  <body class="container-fluid">
+    <main class="container-fluid">
+      <div style="margin-left: 1em">
+        <b
+          role="button"
+          class="contrast"
+          data-tooltip="Dark mode"
+          style="border-radius: 25%"
+        >
+          <b>O</b> </b
+        ><br />
+        <small><a href="#statuses">skip-nav</a></small>
+      </div>
+
+      <article>
+        <header>
+          <hgroup>
+            <h1>
+              <img
+                src="https://cdn.discordapp.com/attachments/1001184473385287710/1005000604080406588/Green-haired_catgirl_with_blue_eyes_and_cat_ears_at_the_beach_by_Ross_Tran_and_WLOP_artstation_hq_sunset_lighting_warm_light_instagram_stars_Photorealistic-0.png"
+                alt="kekstatus"
+                style="
+                  display: inline-block;
+                  border-radius: 50%;
+                  width: 50px;
+                  height: 50px;
+                  margin-right: 10px;
+                "
+              /><br />Ello, this is kek's
+              <span style="color: pink">status page</span>.
+            </h1>
+            <h2>
+              <b>
+                Current status of all services:
+                <span style="color: #c0ffee">Good </span>(100% Up)</b
+              >
+            </h2>
+          </hgroup>
+        </header>
+        <details>
+          <summary role="button" class="contrast outline">
+            <b>Details</b>
+          </summary>
+          <main id="statuses">
+            <article>
+              <header>
+                <hgroup></hgroup>
+                  <h3>Lorem</h3>
+                  <h4>
+                    Ipsum, online for <span style="color: white">10h</span>
+                  </h4>
+                </hgroup>
+              </header>
+              <main>
+                <div class="status-grid">
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                  <div class="status"><div class="online-block"></div></div>
+
+                  <div class="status">
+                    <div class="status-content">
+                      <!-- Safe zone, enter your custom markup -->
+                      <div class="online-block"></div>
+                      <!-- Safe zone ends -->
+                    </div>
+                  </div>
+                </div>
+              </main>
+            </article>
+          </main>
+        </details>
+      </article>
+    </main>
+
+    <style>
+      .status-grid {
+        position: relative;
+      }
+      .status {
+        display: block;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        margin: 5px;
+        z-index: 1;
+        background: #000;
+        color: #fff;
+      }
+      .item.muuri-item-dragging {
+        z-index: 3;
+      }
+      .item.muuri-item-releasing {
+        z-index: 2;
+      }
+      .item.muuri-item-hidden {
+        z-index: 0;
+      }
+      .status-content {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
+      .online-block {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #0f0;
+        border-radius: 25%;
+      }
+    </style>
+
     <script type="module">
+      var grid = new Muuri(".status-grid");
       import { io } from "https://cdn.socket.io/4.4.1/socket.io.esm.min.js";
 
       const socket = io();
